crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__one_of__no_fields.snap
---
source: crates/checker/src/operation_checker/tests/mod.rs
expression: "test_check(schema, doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 25,
            file: 0,
            builtin: false,
        },
        message: OneOfInputNotExactlyOneField {
            name: "UserBy",
        },
        additional_info: [
            (
                Pos {
                    line: 8,
                    column: 18,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "UserBy",
                },
            ),
        ],
    },
]
