crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__one_of__null_field.snap
---
source: crates/checker/src/operation_checker/tests/mod.rs
expression: "test_check(schema, doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 31,
            file: 0,
            builtin: false,
        },
        message: OneOfInputNullValue {
            field: "id",
        },
        additional_info: [],
    },
]
