crates/checker/src/operation_checker/tests/snapshots/nitrogql_checker__operation_checker__tests__one_of__valid_single_field.snap
---
source: crates/checker/src/operation_checker/tests/mod.rs
expression: "test_check(schema, doc)"
---
[]
